# oussama

./: main.c  main.py  pyproject.toml  requirements.txt  setup.py  test_traffic.py
.github/workflows/: publish-testpypi.yml
core/: simulateur.py
data/: config_reseau.json
docs/: modules.rst
models/: reseau.py  route.py  vehicule.py
simulateur_trafic.egg-info/: PKG-INFO  SOURCES.txt
simulateur_trafic_oussama.egg-info/: PKG-INFO  SOURCES.txt
source/: conf.py  index.rst
tests/: conftest.py  test_reseau.py  test_route.py  test_simulateur.py  test_vehicule.py
