[project]
name = "simulateur-trafic-oussama"
version = "0.1.0"
description = "Simulateur de trafic routier (Vehicule, Route, ReseauRoutier, Simulateur)"
authors = [
    { name = "Ahmed", email = "achebbi2002@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "models*"]
exclude = ["tests*", "docs*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

